err/falcon-helpers.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/falcon'...
Listing './lib/python3.5/site-packages/falcon/bench'...
Listing './lib/python3.5/site-packages/falcon/bench/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello/migrations'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/controllers'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/model'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/tests'...
Listing './lib/python3.5/site-packages/falcon/bench/queues'...
Listing './lib/python3.5/site-packages/falcon/cmd'...
Listing './lib/python3.5/site-packages/falcon/media'...
Listing './lib/python3.5/site-packages/falcon/media/validators'...
Listing './lib/python3.5/site-packages/falcon/routing'...
Listing './lib/python3.5/site-packages/falcon/testing'...
Listing './lib/python3.5/site-packages/falcon/util'...
Listing './lib/python3.5/site-packages/falcon-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/falcon_helpers'...
Listing './lib/python3.5/site-packages/falcon_helpers/contrib'...
Listing './lib/python3.5/site-packages/falcon_helpers/middlewares'...
Compiling './lib/python3.5/site-packages/falcon_helpers/middlewares/jinja2.py'...
***   File "./lib/python3.5/site-packages/falcon_helpers/middlewares/jinja2.py", line 53
    logger.error(f'Unable to find {self.template_fpath} looking in '
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/falcon_helpers/middlewares/parsejwt.py'...
***   File "./lib/python3.5/site-packages/falcon_helpers/middlewares/parsejwt.py", line 82
    f' type for this algorithm.'
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/falcon_helpers/resources'...
Compiling './lib/python3.5/site-packages/falcon_helpers/resources/auth0.py'...
***   File "./lib/python3.5/site-packages/falcon_helpers/resources/auth0.py", line 60
    f'https://{self.client_url}/oauth/token',
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/falcon_helpers/sqla'...
Compiling './lib/python3.5/site-packages/falcon_helpers/sqla/columns.py'...
***   File "./lib/python3.5/site-packages/falcon_helpers/sqla/columns.py", line 32
    raise TypeError(f'Unable to store {type(value)}')
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/falcon_helpers-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
